<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">edrick-notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_text">Type TODO item</string>
    <string name="button_enter">Enter</string>
    <string name="button_delete">Remove</string>
    <string name="button_archive">Archive</string>
    <string name="button_email">Email</string>
    <string name="unarchive_button">Unarchive</string>
    <string name="delete_button">Delete</string>
    <string name="email_button">Email</string>
    <string name="todo_cb">TODO CheckBox</string>
    <string name="archive_action">Archives</string>
    <string name="emaill_all">Email All</string>
    <string name="archive_all">Archive All</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_archives">Archives</string>
    <string name="cab_delete">Delete</string>
    <string name="cab_archive">Archive</string>
    <string name="cab_email">Email</string>
    <string name="unarchive_action2">Unarchive</string>
    <string name="delete_action2">Delete</string>
    <string name="email_action2">Email</string>
    <string name="unarchive_all2">Unarchive All</string>
    <string name="delete_all2">Delete All</string>
    <string name="email_all2">Email All</string>
    <string name="title_activity_summary">Summary</string>
    <string name="menu_summary">Summary</string>

</resources>
