<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.demolistview.MainActivity" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/archive_action"
        android:onClick="openArchives"
        android:showAsAction="always"
        android:title="@string/archive_action"/>
    <item
        android:id="@+id/email_all"
        android:showAsAction="never"
        android:title="@string/emaill_all" android:onClick="emailAll"/>
    <item
        android:id="@+id/archive_all"
        android:showAsAction="never"
        android:title="@string/archive_all" android:onClick="archiveAll"/>
    <item 
        android:id="@+id/delete_all"
        android:showAsAction="never"
        android:title="@string/delete_all" android:onClick="deleteAll"/>
    
    <item 
        android:id="@+id/menu_summary"
        android:showAsAction="never"
        android:title="@string/menu_summary" android:onClick="openSummary"/>

</menu>