<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.demolistview.ArchivesActivity" >
    
    <item android:id="@+id/unarchive_all2"
        android:title="@string/unarchive_all2"
        android:showAsAction="always" android:onClick="unarchiveAllArchives"/>
    
    <item android:id="@+id/delete_all2"
        android:title="@string/delete_all2"
        android:showAsAction="ifRoom" android:onClick="deleteAllArchives"/>
    
    <item android:id="@+id/email_all2"
        android:title="@string/email_all2"
        android:showAsAction="ifRoom" android:onClick="emailAllArchives"/>
    
    <item 
        android:id="@+id/menu_summary"
        android:showAsAction="never"
        android:title="@string/menu_summary" android:onClick="openSummary"/>

</menu>
