<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.edrick.notes.ArchivesActivity" >

    <ListView
        android:id="@+id/archives_list_view"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_centerHorizontal="true"
        android:choiceMode="multipleChoice" >

    </ListView>

    <Button
        android:id="@+id/unarchive_action2"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/email_action2"
        android:layout_alignBottom="@+id/email_action2"
        android:layout_alignEnd="@+id/archives_list_view"
        android:layout_alignRight="@+id/archives_list_view"
        android:onClick="unarchiveArchive"
        android:text="@string/unarchive_action2" />

    <Button
        android:id="@+id/delete_action2"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/archives_list_view"
        android:layout_alignStart="@+id/archives_list_view"
        android:layout_below="@+id/archives_list_view"
        android:layout_marginTop="31dp"
        android:onClick="deleteArchive"
        android:text="@string/delete_action2" />

    <Button
        android:id="@+id/email_action2"
        android:layout_width="105dp"
        android:layout_height="70dp"
        android:layout_alignBaseline="@+id/delete_action2"
        android:layout_alignBottom="@+id/delete_action2"
        android:layout_centerHorizontal="true"
        android:onClick="emailArchive"
        android:text="@string/email_action2" />

</RelativeLayout>